deploy/k8s/ingress/app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-deployment-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-deployment-test-service
                port:
                  number: 3001
